resolve code style issues